[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/CharacterSelection/CharacterSelection.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Backgrounds/Forest.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/UI/TheWildBreathOfZelda.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Images/Wooden_UI/frame_green.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/Wooden_UI/frame_blue.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/Wooden_UI/frame_red.png" type="Texture" id=6]
[ext_resource path="res://Scenes/FlashingText/FlashingText.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Overlay/Overlay.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Images/Wooden_UI/logo_01.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 162
font_data = ExtResource( 3 )

[node name="CharacterSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
rect_min_size = Vector2( 720, 1080 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 720, 1080 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Banner" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -528.0
margin_top = -949.724
margin_right = 528.0
margin_bottom = 398.276
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" parent="VBox" instance=ExtResource( 8 )]

[node name="Title" type="Label" parent="VBox"]
margin_right = 1440.0
margin_bottom = 200.0
rect_min_size = Vector2( 1440, 200 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.807843, 0.576471, 0.411765, 1 )
text = "RPG GODOT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Scroll" type="ScrollContainer" parent="VBox"]
margin_top = 204.0
margin_right = 1440.0
margin_bottom = 2308.0
rect_min_size = Vector2( 720, 760 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="VBox/Scroll"]
margin_right = 1440.0
margin_bottom = 2104.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginLeft" type="Control" parent="VBox/Scroll/HBox"]
margin_right = 30.0
margin_bottom = 2104.0
rect_min_size = Vector2( 30, 30 )
mouse_filter = 1

[node name="VBox" type="VBoxContainer" parent="VBox/Scroll/HBox"]
margin_left = 34.0
margin_right = 1406.0
margin_bottom = 2104.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginTop" type="Control" parent="VBox/Scroll/HBox/VBox"]
margin_right = 1372.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
mouse_filter = 1
size_flags_horizontal = 3

[node name="ButtonsVBox" type="VBoxContainer" parent="VBox/Scroll/HBox/VBox"]
margin_top = 34.0
margin_right = 1372.0
margin_bottom = 2104.0
rect_min_size = Vector2( 0, 250 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginRight" type="Control" parent="VBox/Scroll/HBox"]
margin_left = 1410.0
margin_right = 1440.0
margin_bottom = 2104.0
rect_min_size = Vector2( 30, 30 )
mouse_filter = 1

[node name="Seperator" type="Control" parent="VBox"]
margin_top = 2312.0
margin_right = 1440.0
margin_bottom = 2332.0
rect_min_size = Vector2( 0, 20 )

[node name="UI" type="HBoxContainer" parent="VBox"]
margin_top = 2336.0
margin_right = 1440.0
margin_bottom = 2536.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Seperator3" type="Control" parent="VBox/UI"]
margin_bottom = 200.0

[node name="New" type="TextureButton" parent="VBox/UI"]
margin_left = 20.0
margin_right = 473.0
margin_bottom = 200.0
rect_min_size = Vector2( 220, 100 )
mouse_filter = 1
size_flags_horizontal = 7
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
expand = true

[node name="FlashingText" parent="VBox/UI/New" instance=ExtResource( 7 )]
text = "New"
state = 1

[node name="Play" type="TextureButton" parent="VBox/UI"]
margin_left = 493.0
margin_right = 946.0
margin_bottom = 200.0
rect_min_size = Vector2( 220, 100 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 5 )
expand = true

[node name="FlashingText" parent="VBox/UI/Play" instance=ExtResource( 7 )]
text = "Play"
state = 2

[node name="Delete" type="TextureButton" parent="VBox/UI"]
margin_left = 966.0
margin_right = 1420.0
margin_bottom = 200.0
rect_min_size = Vector2( 220, 100 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 6 )
expand = true

[node name="FlashingText" parent="VBox/UI/Delete" instance=ExtResource( 7 )]
text = "Delete"
state = 2

[node name="Seperator4" type="Control" parent="VBox/UI"]
margin_left = 1440.0
margin_right = 1440.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Seperator2" type="Control" parent="VBox"]
margin_top = 2540.0
margin_right = 1440.0
margin_bottom = 2560.0
rect_min_size = Vector2( 0, 20 )
[connection signal="pressed" from="VBox/UI/New" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="VBox/UI/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBox/UI/Delete" to="." method="_on_Delete_pressed"]
